--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,6 +45,7 @@ jobs:
           name: NodeAudit
           path: node-audit-results.json
         if: always()
+        continue-on-error: true
 
   deployment:
     runs-on: ubuntu-latest
