--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,7 +50,7 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     needs: security-testing
-    continue-on-error: true
+    if: always()
     steps: 
       - name: Deployment Steps
         run: |
