--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,9 +50,9 @@ jobs:
   deployment:
     runs-on: ubuntu-latest
     needs: security-testing
-    if: always()
     steps: 
       - name: Deployment Steps
         run: |
           echo "Deployment is going on"
           sleep 30
+    continue-on-error: true
