add coe at audit step

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Perform Node.js Audit and Output to Json file
         run: npm audit --json >> node-audit-results.json
-
+        continue-on-error: true
       - name: List the files available
         run: ls
       
