--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,12 @@
 name: Node.JS Testing Workflow
 
-on: [push]
+on:
+ push:
+  branches: 
+    - master
+  paths:
+    - main.yml
+   
 
 jobs:
   build:
