--- a/.github/workflows/Fullcicd.yml
+++ b/.github/workflows/Fullcicd.yml
@@ -1,5 +1,10 @@
 name: Node JS Full CI CD Flow
-on: [push]
+on:
+ push:
+  branches:
+    - master
+  paths:
+    - Fullcicd.yml
 jobs:
  Build:
   runs-on: ubuntu-latest
@@ -10,3 +15,68 @@ jobs:
        node-version: "12"
    - name: Verify node version
      run: node --version
+    
+ Functional Testing:
+  runs-on: ubuntu-latest
+  needs: Build
+  steps:
+   - name: just echo
+     run: |
+      echo "Functional Testing"
+      sleep 30
+ 
+ Component-testing:
+    runs-on: ubuntu-latest
+    needs: Functional Testing
+    steps:
+      - name: Checkout the Code
+        uses: actions/checkout@v2
+
+      - name: Install the Libraries or Node Modules
+        run: npm install
+
+      - name: Perform Node.js Audit and Output to Json file
+        run: npm audit --json >> node-audit-results.json
+        continue-on-error: true
+
+      - name: List the files available
+        run: ls
+      
+      - name: Upload the Output as an artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: NodeAudit Output
+          path: node-audit-results.json
+        if: always()
+        
+
+ deployment:
+    runs-on: ubuntu-latest
+    needs: [Component-testing, frontend-static-scan]
+    steps: 
+      - name: Deployment Steps
+        run: |
+          echo "Deployment is going on"
+          sleep 30
+ frontend-static-scan:
+    runs-on: ubuntu-latest
+    needs: Functional Testing
+    steps:
+      - uses: actions/checkout@v2
+
+      - run: npm install
+
+      - run: npm install -g retire
+
+      - run: retire --outputformat json --outputpath retirejs-report.json --severity high
+        continue-on-error: true
+
+      - name: Upload the Output as an artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: RetireJS Output
+          path: retirejs-report.json
+        if: always()
+     
+  
+ 
