--- a/.github/workflows/Fullcicd.yml
+++ b/.github/workflows/Fullcicd.yml
@@ -1,10 +1,10 @@
 name: Node JS Full CI CD Flow
-on:
- push:
-  branches:
-    - master
-  paths:
-    - Fullcicd.yml
+on: [push]
+# push:
+ # branches:
+  #  - master
+ # paths:
+   # - Fullcicd.yml
 jobs:
  Build:
   runs-on: ubuntu-latest
