--- a/.github/workflows/Fullcicd.yml
+++ b/.github/workflows/Fullcicd.yml
@@ -1,33 +1,30 @@
-name: Node JS Full CI CD Flow
+name: Node.JS Testing Workflow
+
 on: [push]
-# push:
- # branches:
-  #  - master
- # paths:
-   # - Fullcicd.yml
+
 jobs:
- Build:
-  runs-on: ubuntu-latest
-  steps:
-   - name: Install node JS version 12
-     uses: actions/setup-node@v2
-     with:
-       node-version: "12"
-   - name: Verify node version
-     run: node --version
-    
- Functional Testing:
-  runs-on: ubuntu-latest
-  needs: Build
-  steps:
-   - name: just echo
-     run: |
-      echo "Functional Testing"
-      sleep 30
- 
- Component-testing:
+  build:
     runs-on: ubuntu-latest
-    needs: Functional Testing
+    steps: 
+      - name: Install and Configure Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "12"
+      - name: Verify Weather Node is Installed or Not
+        run: node --version
+
+
+  functional-testing:
+    runs-on: ubuntu-latest
+    needs: build
+    steps: 
+      - name: Functional Testing
+        run: |
+          echo "Functional Testing is going on"
+          sleep 5
+  component-analysis:
+    runs-on: ubuntu-latest
+    needs: functional-testing
     steps:
       - name: Checkout the Code
         uses: actions/checkout@v2
@@ -50,17 +47,17 @@ jobs:
         if: always()
         
 
- deployment:
+  deployment:
     runs-on: ubuntu-latest
-    needs: [Component-testing, frontend-static-scan]
+    needs: [component-analysis, frontend-static-scan]
     steps: 
       - name: Deployment Steps
         run: |
           echo "Deployment is going on"
           sleep 30
- frontend-static-scan:
+  frontend-static-scan:
     runs-on: ubuntu-latest
-    needs: Functional Testing
+    needs: functional-testing
     steps:
       - uses: actions/checkout@v2
 
@@ -77,6 +74,5 @@ jobs:
           name: RetireJS Output
           path: retirejs-report.json
         if: always()
-     
   
  
