--- a/.github/workflows/pythonsafety.yml
+++ b/.github/workflows/pythonsafety.yml
@@ -8,7 +8,7 @@ on:
    - pythonsafety.yml
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps: 
       - name: Install and Configure Node.js
@@ -21,7 +21,7 @@ jobs:
 
   functional-testing:
     runs-on: ubuntu-latest
-    needs: build
+    needs: Build
     steps: 
       - name: Functional Testing
         run: |
