--- a/.github/workflows/statictesting.yml
+++ b/.github/workflows/statictesting.yml
@@ -50,7 +50,7 @@ jobs:
 
   deployment:
     runs-on: ubuntu-latest
-    needs: [component-analysis, frontend-static-scan, backend-static-scan]
+    needs: [component-analysis, frontend-static-scan, backend-static-scan, application-static-scan]
     steps: 
       - name: Deployment Steps
         run: |
@@ -108,7 +108,8 @@ jobs:
         run: pip install njsscan
 
       - name: Run njsscan
-        run: njsscan --outputformat json --outputpath application-static-scan-output.json
+        run: njsscan --json --output application-static-scan-output.json
+        
         continue-on-error: true
 
       - uses: actions/upload-artifact@v2
